--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -181,4 +181,142 @@
   url    = {https://learn.microsoft.com/en-us/azure/databricks/delta/},
 }
 
+@Book{Karau2017,
+  author = {Holden Karau and Rachel Warren},
+  date   = {2017-05-22},
+  title  = {High Performance Spark},
+  url    = {https://books.google.be/books?hl=nl&lr=&id=90glDwAAQBAJ&oi=fnd&pg=PP1&dq=apache+spark&ots=FB4MS_Wiyb&sig=PYBA6rEGqwRMvkKogOdVgkpCqHA#v=onepage&q=apache spark&f=false},
+}
+
+@Book{Karau2015,
+  author = {Holden Karau, Andy Konwinski, Patrick Wendell and Matei Zaharia},
+  date   = {2015-01-26},
+  title  = {Learning Spark},
+  url    = {https://books.google.be/books?id=2eptBgAAQBAJ&printsec=frontcover&redir_esc=y#v=onepage&q&f=false},
+}
+
+@Online{Suneetha2024,
+  author = {Suneetha},
+  date   = {2024-08-24},
+  editor = {Suneetha},
+  title  = {Microsoft Azure – SaaS, PaaS or IaaS},
+  url    = {https://www.winwire.com/blog/microsoft-azure-saas-paas-or-iaas/},
+}
+
+@Online{Awati2023,
+  author = {Rahul Awati},
+  date   = {2023-11-01},
+  editor = {Rahul Awati},
+  title  = {Microsoft Azure Data Lake},
+  url    = {https://www.techtarget.com/searchcloudcomputing/definition/Microsoft-Azure-Data-Lake},
+}
+
+@Online{Siddiqui2023,
+  author = {Zeeshan Siddiqui},
+  date   = {2023-03-01},
+  editor = {Zeeshan Siddiqui},
+  title  = {Azure Security: Protecting Your Data in the Cloud},
+  url    = {https://www.linkedin.com/pulse/azure-security-protecting-your-data-cloud-zeeshan-siddiqui},
+}
+
+@Online{Stoenescu2021,
+  author = {Roxane Beatrice Stoenescu},
+  date   = {2021-02-25},
+  editor = {Roxane Beatrice Stoenescu},
+  title  = {Azure IaaS, PaaS, SaaS – what’s the difference?},
+  url    = {https://www.linkedin.com/pulse/azure-iaas-paas-saas-whats-difference-roxana-beatrice-stoenescu-},
+}
+
+@Online{Microsoft2024d,
+  author = {Microsoft},
+  date   = {2024-03-19},
+  editor = {Microsoft},
+  title  = {Manage Azure resource groups by using the Azure portal},
+  url    = {https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/manage-resource-groups-portal},
+}
+
+@Online{Microsoft2024e,
+  author = {Microsoft},
+  date   = {2024-03-12},
+  editor = {Microsoft},
+  title  = {What is Azure role-based access control (Azure RBAC)?},
+  url    = {https://learn.microsoft.com/en-us/azure/role-based-access-control/overview},
+}
+
+@Online{Microsoft2024f,
+  author = {Microsoft},
+  date   = {2024-04-17},
+  editor = {Microsoft},
+  title  = {Wat is Azure Policy?},
+  url    = {https://learn.microsoft.com/nl-nl/azure/governance/policy/overview},
+}
+
+@Online{Awati2023a,
+  author = {Rahul Awati},
+  date   = {2023-11-01},
+  editor = {Rahul Awati},
+  title  = {Microsoft Azure Data Lake},
+  url    = {https://www.techtarget.com/searchcloudcomputing/definition/Microsoft-Azure-Data-Lake},
+}
+
+@Online{Microsoft2024g,
+  author = {Microsoft},
+  date   = {2024-01-30},
+  editor = {Microsoft},
+  title  = {Azure Key Vault basic concepts},
+  url    = {https://learn.microsoft.com/en-us/azure/key-vault/general/basic-concepts},
+}
+
+@Online{Anaparthy2023,
+  author = {Srija Anaparthy},
+  date   = {2023-11-14},
+  editor = {Srija Anaparthy},
+  title  = {Azure App Registration: Azure Cloud Made Easy},
+  url    = {https://medium.com/@srijaanaparthy/azure-app-registration-azure-cloud-made-easy-ba44a6ea8953#:~:text=Azure App Registration is the,services more secure and accessible.},
+}
+
+@Online{Microsoft2023,
+  author = {Microsoft},
+  date   = {2023-07-08},
+  editor = {Microsoft},
+  title  = {What is Microsoft Cost Management},
+  url    = {https://learn.microsoft.com/en-us/azure/cost-management-billing/costs/overview-cost-management},
+}
+
+@Online{Hill2023,
+  author = {Jessica Hill},
+  date   = {2023-08-23},
+  editor = {Jessica Hill},
+  title  = {Notebooks in Azure Databricks},
+  url    = {https://endjin.com/blog/2023/08/notebooks-in-azure-databricks},
+}
+
+@InBook{Jackson2020,
+  author    = {Jackson, Les},
+  booktitle = {The Complete ASP.NET Core 3 API Tutorial: Hands-On Building, Testing, and Deploying},
+  date      = {2020-09-27},
+  title     = {The CI/CD Pipeline},
+  doi       = {10.1007/978-1-4842-6255-9_12},
+  isbn      = {978-1-4842-6255-9},
+  publisher = {Apress},
+  url       = {https://doi.org/10.1007/978-1-4842-6255-9_12},
+  abstract  = {In this chapter we bring together what we've done so far: build activity, source control, and unit testing and frame it within the context of Continuous Integration/Continuous Delivery (CI/CD).},
+}
+
+@Online{Samuel2021,
+  author = {Nicholas Samuel},
+  date   = {2021-11-08},
+  editor = {Nicholas Samuel},
+  title  = {Databricks Clusters: Types & 2 Easy Steps to Create & Manage},
+  url    = {https://hevodata.com/learn/databricks-clusters/},
+}
+
+@Online{Microsoft2024h,
+  author = {Microsoft},
+  date   = {2024-04-12},
+  editor = {Microsoft},
+  title  = {Introduction to Azure Databricks Workflows},
+  url    = {https://learn.microsoft.com/en-us/azure/databricks/workflows/},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
