--- a/bachproef/FamilienaamVoornaamBP.tex
+++ b/bachproef/FamilienaamVoornaamBP.tex
@@ -89,6 +89,7 @@
 
 % Other packages not already included can be imported here
 \usepackage{float}
+\usepackage{multicol}
 
 %%---------- Document metadata -------------------------------------------------
 % TODO: Replace this with your own information
@@ -96,7 +97,7 @@
 \supervisor{Dhr. Bosteels Gertjan}
 \cosupervisor{Dhr. Van Damme Koen}
 \title[Optionele ondertitel]%
-    {Optimaliseren van gegevensverwerking in MicrosoftAzure: Een vergelijkende analyse van implementatiemethoden voor Extractie, Transformatie en Laden(ETL) en Extractie, Laden en Transformatie (ELT)}
+    {Optimaliseren van gegevensverwerkinging in Microsoft Azure: Een vergelijkende analyse tussen Azure Data Factory en Azure Databricks voor het implementeren van Extractie, Transformatie en Laden (ETL)}
 \academicyear{\advance\year by -1 \the\year--\advance\year by 1 \the\year}
 \examperiod{1}
 \degreesought{\IfLanguageName{dutch}{Professionele bachelor in de toegepaste informatica}{Bachelor of applied computer science}}
@@ -176,9 +177,14 @@
 \input{standvanzaken}
 \input{methodologie}
 
+
 % Voeg hier je eigen hoofdstukken toe die de ``corpus'' van je bachelorproef
 % vormen. De structuur en titels hangen af van je eigen onderzoek. Je kan bv.
 % elke fase in je onderzoek in een apart hoofdstuk bespreken.
+
+\input{vergelijkingscriteria}
+\input{proof-of-concepts}
+\input{uitvoeren}
 
 %\input{...}
 %\input{...}
