--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -35,64 +35,148 @@ Daarnaast biedt Azure ook Azure Databricks aan. Het verschil hierbij is dat de E
 
 Ook Amazon Web Services (AWS) en Google Cloud Services bieden ETL tools aan. Zo heeft AWS bijvoorbeeld AWS Glue~\autocite{Khan2024} en Google Cloud heeft Google Data Fusion.~\autocite{Jaiswal2022}
 
-\section{Azure Data Factory (ADF)}
+\section{Apache Spark}
+\label{sec:apachespark}
 
-Azure Data Factory is een platform-as-a-service (PAAS) voor het implementeren van ETL's en ELT's. Zowel on-premises als cloudgegevensbronnen worden hierbij ge ondersteund voor het verplaatsen van gegevens.~\autocite{Rawat2019} 
+Apache Spark is een gedistributeerd computing systeem dat het meest actieve Apache open source project is geworden. Het stelt zich in staat om data te verwerken in grote hoeveelheden met een relatief eenvoudig te gebruiken API voor zowel Python, Java, Scala en SQL. Het is in staat om om gegevenstransformaties en machine learning algoritmes te schrijven die relatief systeemonafhankelijk zijn.~\autocite{Karau2017}
 
-\subsection{Onderdelen}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{./graphics/spark/spark-stack.png}
+    \caption{Spark stack~\autocite{Karau2015}}
+\end{figure}
+
+Als eerst hebben we Spark Core, dit is het fundament van Apache Spark en biedt de basisfunctionaliteit voor het verdelen en verwerken van gegevens in een gedistribueerde omgeving. Daarnaast hebben we Apache SQL, dit is een module voor het verwerken van gestructureerde gegevens met behulp van SQL-achtige queries. Spark Streaming aan de andere kant is een uitbreiding van de core Spark API die real-time gegevensverwerking mogelijk maakt. MLlib is dan weer de machine learning library van Apache Spark. GraphX is de bibliotheek binnen Apache Spark voor het verwerken van grafiekgegevens en het uitvoeren van grafiekanalyses. En ten slotte zijn er Cluster Managers, deze zijn verantwoordelijk voor het beheren van resources en het toewijzen van taken binnen een Spark-cluster. Voorbeelden hiervan zijn Apache Hadoop YARN, Apache Mesos en ingebouwde standalone-clustermodus van Spark.~\autocite{Karau2015}
+
+\section{Continuous Integration (CI) en Continuous Deployment (CD)}
+
+Bij Continuous Integration (CI) wordt de code van één of meerdere developers samen gevoegd, getest en gebouwd. Dit gebeurd continu. Een voorbeeld hiervan is dat een developer de code van zijn/haar GitHub branch merged op de ``main'' (of ``master'') branch van het project. Het doel van CI is dat deze ``main'' (of ``master'') branch gezond blijft en dat nieuwe aanpassingen door meerdere developers niet zorgt voor fouten in de code die resulteren in het falen van een build.~\autocite{Jackson2020}\\
+
+Continuous Delivery (CD) is een uitbereiding van Continuous Integration. Het is het automatiseren van het release process. Het zorgt er voor dat aanpassingen frequent gedeployed kunnen worden.~\autocite{Jackson2020}\\
+
+Ten slotte is er ook Continuous Deployment. Dit is een uitbereiding op Continuous Delivery en zorgt er voor dat code changes automatisch naar productie worden gepusht.~\autocite{Jackson2020}\\
+
+\section{Microsoft Azure}
+
+Microsoft Azure is een cloud computing-platform die door Microsoft wordt aangeboden. Het biedt een breed scala aan cloudgebaseerde oplossingen en services waarmee bedrijven en ontwikkelaars applicaties kunnen bouwen, implementeren en beheren. \\
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{./graphics/standvanzaken/verschillen.jpg}
+    \caption{Verschillen tussen IaaS, PaaS en SaaS~\autocite{Stoenescu2021}}
+\end{figure}
+
+Met Azure kunnen bedrijven gebruikmaken van Infrastructure as a Service (IaaS), waardoor ze onder andere virtuele machines, opslag en netwerken kunnen huren op basis van hun behoeften. Dit geeft organisaties de flexibiliteit om snel op te schalen zonder dat ze fysieke servers hoeven aan te schaffen. Daarnaast biedt het platform ook een Platform as a Service (PaaS), waarmee ontwikkelaars zich kunnen concentreren op het ontwikkelen van applicaties zonder zich zorgen te hoeven maken over de onderliggende infrastructuur. Ten slotte is er ook Software as a Service. Hierbij wordt er een applicatie gehost en beschikbaar gemaakt voor de gebruiker op basis van een subscription. Voorbeelden hier van zijn bijvorbeeld officetools (Microsoft Office 365).~\autocite{Suneetha2024} \\
+
+Azure is sterk in dataopslag en -beheer, waarbij veilige en schaalbare opties worden aangeboden voor zowel gestructureerde als ongestructureerde gegevens. Bovendien kunnen organisaties gebruikmaken van analyse- en big data-services zoals Azure Synapse Analytics en HDInsight om inzichten te verkrijgen die strategische beslissingen ondersteunen.~\autocite{Awati2023} \\
+
+Darnaast biedt Azure ook encryptie, toegangsbeheer en compliance-certificeringen om gegevens veilig te houden.~\autocite{Siddiqui2023}
+
+%\subsection{Microsoft Entra ID}
+%
+%Microsoft Entra ID, voorheen bekend als Azure Active Directory, is een uitgebreide cloud-gebaseerde identiteits- en toegangsbeheeroplossing van Microsoft. Het biedt organisaties de mogelijkheid om gebruikersidentiteiten effectief te beheren en toegang tot verschillende applicaties en diensten te controleren.
+%
+%Een van de kernfuncties van Entra ID is Single Sign-On (SSO), waarmee gebruikers met één enkele aanmelding toegang kunnen krijgen tot meerdere applicaties en diensten. Dit vereenvoudigt de gebruikerservaring en verhoogt de productiviteit, omdat herhaaldelijke inlogpogingen niet langer nodig zijn.
+%
+
+\subsection{Subscription}
+
+Een Azure Subscription helpt bij het beheren van toegang tot Azure-services en bijhorende kosten. Binnen dit abonnement wordt de toegang tot resources beheerd en worden kosten bijgehouden. Elk abonnement wordt gekoppeld aan een factureringseenheid, zoals een creditcard of een zakelijke overeenkomst. Een Azure Subscription heeft vaak een gelaagde structuur. De belangrijkste elementen hiervan zijn:
+
+\subsubsection{Resource Groups}
+
+Dit zijn logische containers waarin je vergelijkbare resources kunt plaatsen om het beheer te vereenvoudigen. Bijvoorbeeld, alle resources die nodig zijn voor een specifieke applicatie kunnen binnen één resourcegroep worden gegroepeerd.~\autocite{Microsoft2024d}
+
+\subsubsection{Roles en Role-Based Access Control (RBAC)}
+
+Gebruikers en groepen kunnen rollen toegewezen krijgen die hun toegang tot resources binnen het abonnement bepalen. Deze rollen kunnen variëren van lezer tot eigenaar, afhankelijk van de benodigde toegangsrechten.~\autocite{Microsoft2024e}
+
+\subsubsection{Beleidsregels}
+
+Organisaties kunnen beleidsregels instellen om te controleren welke resources kunnen worden gebruikt en hoe ze worden ingezet.~\autocite{Microsoft2024f}
+
+\subsection{Data Lake}
+
+Azure Data Lake is een cloudgebaseerde gegevensopslag ontworpen om bedrijven te helpen met het beheren en analyseren van grote hoeveelheden gestructureerde en ongestructureerde gegevens. De technologie achter Azure Data Lake bestaat uit drie hoofdelementen: Azure HDInsight, Azure Data Lake Storage en Azure Data Lake Analytics.~\autocite{Awati2023a}\\
+
+HDInsight is een open source analytics platform voor het beheren van big data.~\autocite{Awati2023a}\\
+
+Daarnaast is Data Lake Storage een veilige en schaalbare opslagservice die gegevens in hun oorspronkelijke formaat kan bewaren, ongeacht het type. Het is geoptimaliseerd voor big data-workloads, waardoor het grote hoeveelheden data van verschillende bronnen snel kan verwerken en opslaan.~\autocite{Awati2023a}\\
+
+Aan de andere kant biedt Azure Data Lake Analytics een serverloze analyseomgeving waarin ontwikkelaars complexe queries kunnen uitvoeren op de opgeslagen gegevens. Door gebruik te maken van U-SQL, een querytaal die de kracht van SQL en C\# combineert, kunnen gebruikers gemakkelijk aangepaste analyses uitvoeren op grote datasets. Bovendien betaalt men alleen voor de verbruikte rekenkracht, waardoor dit model schaalbaar en kostenefficiënt is.~\autocite{Awati2023a}\\
+
+Een belangrijk aspect van Azure Data Lake is dat kan integreren met andere Azure-services, zoals bijvoorbeeld Azure Synapse Analytics of Power BI.
+
+\subsection{Key Vault}
+
+Azure Key Vault maakt het mogelijk om veilig cryptografische sleutels en andere gevoelige informatie, zoals certificaten, API-sleutels en wachtwoorden op te slaan. De service biedt strenge toegangscontrole en encryptie om ervoor te zorgen dat gevoelige informatie privé en beschermd blijft. Met behulp van Azure Key Vault kunnen bijvoorbeeld secrets opgeslaan worden die dan via HTTPS toegankelijk zijn binnen beveiligde applicaties. Toegangsbeheer binnen Azure Key Vault wordt geregeld via Azure Active Directory (AAD), waardoor beheerders controle hebben over wie toegang heeft tot de Key Vault en wat ze kunnen doen met de opgeslagen geheimen. Bij het uitvoeren van ETL-processen (Extract, Transform, Load) is het van cruciaal belang dat gegevensbronnen en bestemmingen veilig met elkaar communiceren. Azure Key Vault speelt hierin een sleutelrol door als centrale opslagplaats voor alle gevoelige verbindingsinformatie te dienen, zoals database wachtwoorden en API-sleutels. Dit minimaliseert het risico op datalekken en verhoogt de veiligheid van het ETL-proces.~\autocite{Microsoft2024g}
+
+\subsection{App Registration}
+
+Met behulp van Azure App Registration kan een applicatie de nodige credentials krijgen tot Azure services en API's. Het is een soort paspoort voor een specifieke applicatie.~\autocite{Anaparthy2023}
+
+\subsection{Cost Management}
+
+In Azure is Micosoft Cost Management ontworpen voor het analyseren, monitoren en optimaliseren van kosten. Dankzij Cost Management kunnen rapporten en analyses gemaakt worden in de Azure Portal of in Power BI. Daarnaast kunnen er ook budgetten en waarschuwingen ingesteld worden. Ook zijn er verschillende hulpmiddelen beschikbaar die helpen bij het inschatten van cloudkosten. Kort samen gevat bevat het dus alle nodige tools voor het beheren, analyseren, inschatten en optimaliseren van kosten.~\autocite{Microsoft2023}
+
+\subsection{Azure Data Factory (ADF)}
+
+Azure Data Factory is een Platform as a Service (PaaS) voor het implementeren van ETL's en ELT's. Zowel on-premises als cloudgegevensbronnen worden hierbij ge ondersteund voor het verplaatsen van gegevens.~\autocite{Rawat2019} 
+
+\subsubsection{Onderdelen}
 
 Azure Data Factory is opgebouwd uit verschillende onderdelen. Als eerste hebben we een pipeline. Dit is een groep van activiteiten die een reeks processen uitvoert zoals bijvoorbeeld het extraheren of transformeren van gegevens. Een voorbeeld van een activity is een Mapping Data Flow. Hiermee kan men logica voor datatransformaties ontwikkelen zonder code te schrijven. Daarnaast zijn er ook datasets. Dit is een representatie of verwijzing naar de daadwerkelijke gegevens in gegevensopslag. Een dataset is steeds gekoppeld aan een linked service. Deze slaan de informatie op die Azure Data Factory nodig heeft voor het connecteren naar een externe dataopslag. Een pipeline wordt uitgevoerd door een trigger. Er zijn veel verschillende soorten triggers voor veel verschillende soorten events. Daarnaast kan er voor een pipeline parameters gedefinieerd worden. Dit zijn read-only key-value pairs die een configuratie vormen. Ook kunnen er variables gebruikt worden om tijdelijk waardes op te slaan. In combinatie met parameters kunnen dan waardes tussen pipelines, data flows, en andere activities door gegeven worden. Wanneer een pipeline wordt uitgevoerd zal er een pipeline run aangemaakt worden.~\autocite{Microsoft2024a} 
 
-\subsection{Mapping Data Flows}
+\subsubsection{Mapping Data Flows}
 
 Met behulp van Mapping Data Flows kunnen ETL's geïmplementeerd worden zonder hiervoor gebruik te moeten maken van code. De resulterende data flows worden uitgevoerd als activities binnen een Azure Data Factory pipeline dat gebruik maakt van Apache Spark Clusters. Deze Mapping Data Flows maken gebruik van data flow scripts. Dit zijn artifacten die gegenereerd worden door de UI. Het is een taal die de data transformatie beschrijft dat de Spark Cluster zal moeten uitvoeren. De UI van Azure Data Factory beheert het data flow script maar het script kan ook bekeken en handmatig bewerkt worden.~\autocite{Kromer2022a}
 
-In Mapping Data Flows kunnen verschillende soorten transformaties gedaan worden:
+In Mapping Data Flows kunnen verschillende soorten transformaties gedaan worden zoals bijvoorbeeld het joinen, het filteren of selecteren van data.
 
-\begin{itemize}
-    \item Multiple inputs/outputs
-    \begin{itemize}
-        \item New Branch
-        \item Join
-        \item Conditional Split
-        \item Exists
-        \item Union
-        \item Lookup
-    \end{itemize}
-    \item Schema modifier
-    \begin{itemize}
-        \item Derived Column
-        \item Select
-        \item Aggregate
-        \item Surrogate Key
-        \item Pivot
-        \item Unpivot
-        \item Window
-        \item Rank
-        \item External Call
-    \end{itemize}
-    \item Formatters
-    \begin{itemize}
-        \item Flatten
-        \item Parse
-        \item Stringify
-    \end{itemize}
-    \item Row modifier
-    \begin{itemize}
-        \item Filter
-        \item Sort
-        \item Alter Row
-        \item Assert
-    \end{itemize}
-    \item Flowlets
-    \begin{itemize}
-        \item Flowlet
-    \end{itemize}
-    \item Destination
-    \begin{itemize}
-        \item Sink
-    \end{itemize}
-\end{itemize}
+%\begin{itemize}
+%    \item Multiple inputs/outputs
+%    \begin{itemize}
+    %        \item New Branch
+    %        \item Join
+    %        \item Conditional Split
+    %        \item Exists
+    %        \item Union
+    %        \item Lookup
+    %    \end{itemize}
+%    \item Schema modifier
+%    \begin{itemize}
+    %        \item Derived Column
+    %        \item Select
+    %        \item Aggregate
+    %        \item Surrogate Key
+    %        \item Pivot
+    %        \item Unpivot
+    %        \item Window
+    %        \item Rank
+    %        \item External Call
+    %    \end{itemize}
+%    \item Formatters
+%    \begin{itemize}
+    %        \item Flatten
+    %        \item Parse
+    %        \item Stringify
+    %    \end{itemize}
+%    \item Row modifier
+%    \begin{itemize}
+    %        \item Filter
+    %        \item Sort
+    %        \item Alter Row
+    %        \item Assert
+    %    \end{itemize}
+%    \item Flowlets
+%    \begin{itemize}
+    %        \item Flowlet
+    %    \end{itemize}
+%    \item Destination
+%    \begin{itemize}
+    %        \item Sink
+    %    \end{itemize}
+%\end{itemize}
 
 %\subsubsection{Pipeline}
 %
@@ -140,20 +224,38 @@ In Mapping Data Flows kunnen verschillende soorten transformaties gedaan worden:
 %
 %Self-Hosted IR
 
-\section{Azure Databricks}
+\subsection{Azure Databricks}
 
 Azure Databricks is een geavanceerd platform voor data-analyse dat zich integreert met Azure services. Het biedt een complete omgeving voor het ontwikkelen, implementeren en delen van krachtige data-analyses en AI-toepassingen op grote schaal. Het integreert zich ook met de opensource-community zoals bijvoorbeeld Delta Lake, Delta Sharing, MLflow, Apache Spark en Redash. Veel voorkomende use cases van Azure Databricks zijn het bouwen van een data lakehouse voor ondernemingen, het implementeren van ETL's, gebruik van machine learning en dergelijke.~\autocite{Microsoft2024}
 
-\subsection{Delta Lake}
+\subsubsection{Notebooks}
+
+Met behulp van Azure Databricks Notebook kan er een collaboratieve, interactieve interface gebruikt worden die het mogelijk maakt om live code, tekst en visualisaties te combineren. Er kan bijvoorbeeld code geschreven worden in Python, SQL, Scala en R. Deze kan dan uitgevoerd worden met behulp van Apache Spark. Doordat Databricks opgericht is door de makers van Apache Spark kan er gebruik gemaakt worden van een geoptimaliseerde versie van Apache Spark. Deze heeft meer functionaliteiten en een betere performantie. Dit maakt Databricks interessant voor bedrijven die zich willen focussen op implementaties die vooral enkel Spark gebruiken.~\autocite{Hill2023}
+
+\subsubsection{Clusters}
+
+Met behulp van Databricks Clusters kunnen jobs en notebooks uitgevoerd worden. Er zijn twee verschillende soorten clusters, All-purpose Clusters en Job Clusters. All-purpose Clusters worden manueel gebruikt in notebooks. Job Clusters aan de andere kant worden gebruikt binnen jobs. Wanneer een job wordt uitgevoerd zal deze cluster opgestart worden en wanneer de job klaar is met uitvoeren zal deze terug afgesloten worden.~\autocite{Samuel2021}\\
+
+Clusters kunnen één driver node en één of meerdere worker nodes hebben. De driver houdt de status van alle notebooks in het cluster bij en stuurt werk naar de worker nodes.~\autocite{Samuel2021}
+
+\subsubsection{Jobs}
+
+Met behulp van Azure Databricks jobs kunnen applicaties zoals bijvoorbeeld notebooks uitgevoerd worden. Dit kan bijvoorbeeld via een scheduling systeem of wanneer nieuwe bestanden arriveren op een bepaalde externe locatie. Jobs kunnen aangemaakt worden via de Jobs UI, de Databricks CLI of via de Jobs API.~\autocite{Microsoft2024h}
+
+%Apache Spark Clusters in Azure Databricks zijn groepen van Azure VM's. Deze maken het mogelijk om het data parallel te verwerken om zo prestaties te verbeteren. Er zijn twee type clusters. Als eerst hebben we interactieve clusters, deze worden manueel in de UI aangemaakt. Daarnaast zijn er job clusters. Deze worden gebruikt binnen Databricks jobs en worden automatisch opgestart wanneer een job uitgevoerd wordt. Wanneer de job klaar is met uitvoeren worden deze weer uitgeschakeld.
+%
+%Een cluster bestaat uit één driver en nul tot meerdere worker nodes. De driver geeft instructies en werk aan de worker nodes.
+
+\subsubsection{Data lakehouse}
+
+
+\subsubsection{Delta Lake}
 
 Delta Lake is het standaard opslagformaat voor alle operaties binnen Azure Databricks. Het maakt gebruik van Parquet data bestanden met een file-based transaction log voor ACID transactions.~\autocite{Microsoft2024c}
 
-\subsection{Delta Live Tables}
+\subsubsection{Delta Live Tables}
 
 Delta Live Tables is een framework voor het bouwen van processing pipelines. Hierbij wordt er gebruik gemaakt van streaming tables en materialized views. Streaming tables zijn Delta tables waarbij er extra support is voor streaming of incremental data processing en materialized views zijn views waarbij de resultaten precomputed zijn.~\autocite{Microsoft2024b}
-
-
-
 
 
 
